kube/kube-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: qreach-ingress
 annotations:
    enable-underscores-in-headers: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.global-static-ip-name: "ingress-webapps"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers Id-Token $http_id_token;
     #set $dataflag 0;

     #if ($http_id_token){
      #set $dataflag 1;
      #}

      #if ( $dataflag = 1 ){
      #set $service_name "auth-cluster-service";
      #}
    #   if ($http_id_token = "PL") { proxy_pass http://auth-cluster-service.default.svc.cluster.local:8082/verify; }
    #nginx.org/server-snippets: |
    #  location /* {
    #    return 308 /verify;
    #  }  
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    #nginx.ingress.kubernetes.io/rewrite-target: "http://qreach.adamradvan.eu/login"
    #nginx.ingress.kubernetes.io/permanent-redirect: http://qreach.adamradvan.eu/login
    #nginx.ingress.kubernetes.io/auth-url: http://auth-cluster-service.default.svc.cluster.local:8082/verify
    nginx.ingress.kubernetes.io/auth-response-headers: $http_id_token
spec:
  #ingressClassName: nginx
  #tls:
  #- hosts:
  #  - qreach.adamradvan.eu
  #  secretName: qreach-server-tls
  #defaultBackend:
    #service:
      #name: auth-cluster-service
      #port:
        #number: 8082
  rules:
  #
  - host: qreach.adamradvan.eu
    http:
      paths:
      - pathType: Prefix 
        path: "/"
        backend:
          service:
            name: auth-cluster-service
            port:
              number: 8082
      #service qr-cluster-service
      - pathType: Prefix 
        path: "/secure/qr-code"
        backend:
          service:
            name: qr-cluster-service
            port:
              number: 8080
              
      #service auth-cluster-service
      - pathType: Prefix 
        path: "/login"
        backend:
          service:
            name: auth-cluster-service
            port:
              number: 8082
      - pathType: Prefix 
        path: "/verify"
        backend:
          service:
            name: auth-cluster-service
            port:
              number: 8082
      #service his-cluster-service 
      - pathType: Prefix 
        path: "/secure/history"
        backend:
          service:
            name: his-cluster-service
            port:
              number: 8888
      - pathType: Prefix 
        path: "/secure/test"
        backend:
          service:
            name: his-cluster-service
            port:
              number: 80
      #service front-end


#status:
#  loadBalancer:
#    ingress:
#    - ip: 35.246.134.137
